# cholera_risk_modeling

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cholera_risk_modeling.yaml  convert_cholera_outbreaks_from_pdf_to_text.sh  create_train_and_test_set.ipynb  download_and_preprocess_land_surface_temperature.py  download_chlorophyll_a_concentration_data.sh  download_cholera_outbreaks_data.py  download_cholera_outbreaks_pdfs.py  download_land_surface_temperature_data.sh  download_sea_surface_salinity_data.sh  exploratory_data_analysis.ipynb  extract_outbreaks_from_pdfs.ipynb  modeling.ipynb  preprocess_cholera_outbreaks.ipynb  preprocess_essential_climate_variables.ipynb  pyproject.toml
1_download_the_data/: download_and_preprocess_land_surface_temperature.py  download_chlorophyll_a_concentration.sh  download_cholera_outbreaks_data.py  download_outbreaks.py  download_sea_surface_salinity.sh
2_preprocess_the_data/: convert_cholera_outbreaks_from_pdf_to_text.sh  extract_and_clean_cholera_outbreaks.py  extract_tables_from_pdf_files.py  preprocess_cholera_outbreaks.ipynb  preprocess_cholera_outbreaks_v1.ipynb  preprocess_cholera_outbreaks_v2.ipynb  preprocess_cholera_outbreaks_v3.ipynb  preprocess_essential_climate_variables.ipynb
3_exploratory_data_analysis_and_validation/: exploratory_data_analysis_and_validation.ipynb
5_modeling/: modeling.ipynb
src/cholera_risk_modeling/create_train_test_set/: create_train_and_test_set.ipynb
src/cholera_risk_modeling/download_data/: download_and_preprocess_land_surface_temperature.py  download_chlorophyll_a_concentration.sh  download_outbreaks.py  download_sea_surface_salinity.sh
src/cholera_risk_modeling/exploratory_data_analysis_and_validation/: exploratory_data_analysis_and_validation.ipynb
src/cholera_risk_modeling/modeling/: modeling.ipynb
src/cholera_risk_modeling/preprocess_data/: extract_and_clean_cholera_outbreaks.py  (+2 more)
