[project]
name = "cholera-risk-modeling"
version = "0.1.0"
description = "Cholera risk modeling"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas",
    "scikit-learn",
    "imbalanced-learn",
    "matplotlib",
    "seaborn",
    "beautifulsoup4",
    "xarray",
    "geopy",
    "ipykernel",
    "jupyterlab",
    "geopandas",
    "pyproj",
    "shapely",
    "fiona",
    "nctoolkit",
    "camelot-py",
]

[project.optional-dependencies]
# Install with: uv sync --extra dev
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
